# magisterij

./: .gitignore  README.md  fmf-sl-alpha.bst  fmf-sl-num.bst  literatura.bib  magisterij.tex  reference.bib
code/discretizations/: CMakeLists.txt  circle_data.h5  discretization_circle.cpp  discretization_relax_example.cpp  hs_data.h5  plot_hs.m  plot_relax_comparison.m
code/numerical_examples/: .exclude_list.txt  CMakeLists.txt  cantilever_beam.cpp  cantilever_beam_matrix_example.cpp  cantilever_beam_with_holes.cpp  circle_fractal.py  convergence_test_1D_rbf.cpp  convergence_test_neumann.cpp  fwo_cases.cpp  fwo_convergence.cpp  fwo_solution.cpp  hertzian_convergence.cpp  hertzian_domain_too_small.cpp  hertzian_matrix_example.cpp  hertzian_refine_levels_convergence.cpp  hertzian_refined_convergence.cpp  overseer.hpp  overseer_cantilever.hpp  overseer_fwo.hpp  plot_cantilever_beam_convergence.m  poisson_neumann.cpp  poisson_square.cpp  poisson_square_explicit.cpp  poisson_square_implicit.cpp  poisson_square_implicit_basis.cpp  poisson_square_implicit_rbf_konv_k_mon.cpp  poisson_square_implicit_sigma_scan.cpp  poisson_square_parallel.cpp  poisson_weird.cpp  process_cantilever_beam_solution.m  realistic_beam.cpp  sync_to_jarjar.sh
code/numerical_examples/common/: cantilever_beam_analytical.m  hertzian_analytical.m  prepare.m  tau1.m  von_mises.m
code/numerical_examples/params/: cantilever_beam.xml  cantilever_beam_with_holes.xml  fwo_case_r10_cof0.3.xml  fwo_case_r10_cof2.xml  fwo_case_r50_cof0.3.xml  fwo_case_r50_cof2.xml  fwo_solution.xml  fwo_table_r10_cof0.3.xml  fwo_table_r10_cof0.85.xml  fwo_table_r10_cof2.xml  fwo_table_r50_cof0.3.xml  fwo_table_r50_cof0.85.xml  fwo_table_r50_cof2.xml  hertzian.xml  hertzian_refined.xml  realistic_beam.xml
code/numerical_examples/plotdata/: cantilever_beam_convergence.mat  cantilever_beam_matrix_example.mat  cantilever_beam_solution.mat  cantilever_beam_time.mat  error_gau.txt  fwo_cases.mat  fwo_solution.mat  hertzian_convergence.mat  hertzian_domain_too_small.mat  hertzian_domain_too_small2.mat  hertzian_matrix_example.mat  hertzian_refine_levels_convergence.mat  hertzian_refined_domain.mat  hertzian_refined_domain_density.mat  hertzian_solution.mat  lap1d.mat  number_cuttoff_svd_gau.txt  poisson_sigma_dependence_gau.mat  poisson_square_implicit.mat  poisson_square_parallel.mat  poisson_square_rbf_konv_k_mon.mat  poisson_weird.mat  sigmaB_gau.txt  sigmaW_gau.txt  weird_domains.mat
code/numerical_examples/plots/: closest.m  fdm_solve.m  neumann_1D.m  neumann_1D_rbf.m  one.m  plot_hertzian_analytical.m  plot_hertzian_convergence.m  plot_hertzian_refine_convergence.m  plot_sigma_dependance_gau.m  poisson_square.m  poisson_square_analytical.m  poisson_square_basis.m  poisson_square_rbf_konv_k_mon.m  poisson_weird.m
code/numerical_examples/plotscripts/: plot_cantilever_beam_convergence.m  plot_cantilever_beam_matrix_example.m  plot_cantilever_beam_solution.m  plot_cantilever_beam_time.m  plot_cantilever_beam_with_holes.m  plot_fwo_cases.m  plot_fwo_sample_pq.m  plot_fwo_solution.m  plot_hertzian _matrix _example.nb  plot_hertzian_analytical.m  plot_hertzian_convergence.m  plot_hertzian_domain_too_small2.m  plot_hertzian_doman_too_small.m  plot_hertzian_matrix_example.m  plot_hertzian_refine_levels_convergence.m  plot_hertzian_refined_domain.m  plot_hertzian_refined_domain_density.m  plot_hertzian_solution.m  plot_neumann_1d.m  plot_poisson_sigma_dependence_gau.m  plot_poisson_square_implicit.m  plot_poisson_square_parallel.m  plot_poisson_square_rbf_konv_k_mon.m  plot_poisson_weird.m  plot_weird_domains.m  process_cantilever_beam_convergence.m
code/numerical_examples/postprocess/: process_cantilever_beam_matrix_example.m  process_cantilever_beam_time.m  process_cantilever_beam_with_holes.m  process_fwo_cases.m  process_fwo_solution.m  process_hertzian_convergence.m  process_hertzian_domain_too_small.m  process_hertzian_domain_too_small2.m  process_hertzian_matrix_example.m  process_hertzian_refine_levels_convergence.m  process_hertzian_refined_domain.m  process_hertzian_refined_domain_density.m  process_hertzian_solution.m  process_neumann_1D.m  process_poisson_sigma_dependance_gau.m  process_poisson_square_implicit.m  process_poisson_square_parallel.m  process_poisson_square_rbf_konv_k_mon.m  process_poisson_weird.m  process_weird_domains.m
code/numerical_examples/scripts/: cantilever_beam.cpp  cantilever_beam_matrix_example.cpp  cantilever_beam_with_holes.cpp  convergence_test_1D_neumann.cpp  convergence_test_1D_rbf.cpp  fwo_cases.cpp  fwo_table.cpp  hertzian_convergence.cpp  hertzian_domain_too_small.cpp  hertzian_domain_too_small2.cpp  hertzian_refine_levels_convergence.cpp  overseer_cantilever.hpp  poisson_square_implicit.cpp  poisson_square_implicit_rbf_konv_k_mon.cpp  poisson_square_parallel.cpp
code/numerical_examples/wip/: cantilever_beam_with_holes.m  cantilever_convergence.m  fwo_cases.m  fwo_convergence.m  fwo_solution.m  fwo_table.m  hertzian_domain_too_small.m  hertzian_refine_convergence.m  one.m  (+8 more)
(+23 files in other folders)
